hummmmmmmm, estará bem??

--- a/index.html
+++ b/index.html
@@ -169,16 +169,19 @@
         </div>
     </main>
     <div>
-        <div id="banner1">
+        <div class="banner1">
             <img src="imgs/SUV1_banner_pre-footer1.jpeg" class="banner">
             <div class="centered">O SEU SUV USADO
                 <br><br>
-            COMO ESCOLHER BEM O SEU SUV USADO</div>
-            <div class="centered-bottom" id="button1">LEIA MAIS</div>
+            <p>COMO ESCOLHER BEM O SEU SUV USADO</p></div>
+            <div class="centered-bottom">LEIA MAIS</div>
         </div>
         
-        <div id="banner1">
+        <div class="banner1">
             <img src="imgs/Occ_banner_pre-footer2.jpeg" class="banner">
+            <div class="centered"><p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p></div>
+            <div class="centered-bottom">LEIA MAIS</div>
+        </div>
         </div>
     </div>
     <footer>
