Já não estou capaz de olhar mais para isto

--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
             </div>
     </header>
     <main>
+        <!--<div>
+            <div class="carrossel">
+                <ul class="slides-list">
+                    <li>
+                        <input type="radio" id="slide1" name="slide" checked>
+                        <label for="slide1"></label>
+                        <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
+                    </li>
+                    <li>
+                        <input type="radio" id="slide2" name="slide">
+                        <label for="slide2"></label>
+                        <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
+                    </li>
+                    <li>
+                        <input type="radio" id="slide3" name="slide">
+                        <label for="slide3"></label>
+                        <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
+                    </li>
+                </ul>
+            </div>
+        </div>-->
+
+
+
         <div class="calculator" id="sale">
             <h2>Preço de Venda</h2>
             <form>
@@ -166,7 +190,7 @@
                 </div>
             </div>
         </div>
-        <img id="brand-banner" src="imgs/banner_desktop_marcas.jpg">
+        <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
         <div id="interim-info">
             <h2>PESQUISE E RESERVE ON-LINE</h2>
             <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
@@ -230,7 +254,7 @@
     </main>
     <div>
         <div class="banner1">
-            <img src="imgs/SUV1_banner_pre-footer1.jpeg" class="banner">
+            <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
             <div class="centered">O SEU SUV USADO
                 <br><br>
             <p>COMO ESCOLHER BEM O SEU SUV USADO</p></div>
@@ -238,7 +262,7 @@
         </div>
         
         <div class="banner1">
-            <img src="imgs/Occ_banner_pre-footer2.jpeg" class="banner">
+            <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
             <div class="centered"><p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p></div>
             <div class="centered-bottom">LEIA MAIS</div>
         </div>
