hiper zézé dos zézés

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,74 +8,56 @@
     <link href="footer.css" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <footer>
         <div id="discover-new">
-            <div id="li1col1">
-                <h2>
-                    DESCUBRA TAMBÉM...
-                </h2>
-            </div>
-            <div id="linha2">
-                <ul>
-                    <li>
-                        <div id="li2col1"></div>
-                            <ul class="discover-column">
-                                <li>
-                                    Categorias
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>SUV's e 4x4</li>
-                                        <li>Carrinhas</li>
-                                        <li>Berlinas</li>
-                                        <li>Familiares</li>
-                                        <li>Citadinos</li>
-                                        <li>ver mais</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div id="li2col2">
-                            <ul class="discover-column">
-                                <li>
-                                    Características
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>Usado com 4 rodas motorizes</li>
-                                        <li>Usado com 7 lugares</li>
-                                        <li>Usados Híbridos</li>
-                                        <li>Usados Elétricos</li>
-                                        <li>Usados com mudanças automáticas</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <div id="li2col3">
-                            <ul class="discover-column">
-                                <li>
-                                    Outros
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>Usados premium</li>
-                                        <li>Usados recentes</li>
-                                        <li>Usados a menos de 15000€</li>
-                                        <li>Usados a menos de 20000€</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <h2 id="li1col1">
+                DESCUBRA TAMBÉM...
+            </h2>
+
+            <ul id="li2col1" class="discover-column">
+                <li>
+                    Categorias
+                </li>
+                <li class="content">
+                    <ul>
+                        <li>SUV's e 4x4</li>
+                        <li>Carrinhas</li>
+                        <li>Berlinas</li>
+                        <li>Familiares</li>
+                        <li>Citadinos</li>
+                        <li>ver mais</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul id="li2col2" class="discover-column">
+                <li>
+                    Características
+                </li>
+                <li class="content">
+                    <ul>
+                        <li>Usado com 4 rodas motorizes</li>
+                        <li>Usado com 7 lugares</li>
+                        <li>Usados Híbridos</li>
+                        <li>Usados Elétricos</li>
+                        <li>Usados com mudanças automáticas</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul id="li2col3" class="discover-column">
+                <li>
+                    Outros
+                </li>
+                <li class="content">
+                    <ul>
+                        <li>Usados premium</li>
+                        <li>Usados recentes</li>
+                        <li>Usados a menos de 15000€</li>
+                        <li>Usados a menos de 20000€</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div id="discover-new2">
             <div id="li3col1">
@@ -82,61 +65,55 @@
                     PESQUISAR POR LOCALIZAÇÃO
                 </h2>
             </div>
-            <div id="linha4">
-                <ul>
+            <div id="li4col1">
+                <ul class="discover-column">
                     <li>
-                        <div id="li4col1">
-                            <ul class="discover-column">
-                                <li>
-                                    Regiões
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>Norte</li>
-                                        <li>Centro</li>
-                                        <li>Sul</li>
-                                        <li>Madeira</li>
-                                        <li>Açores</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
+                        Regiões
                     </li>
-                    <li>
-                        <div id="li4col2">
-                            <ul class="discover-column">
-                                <li>
-                                    Regiões
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>Grande Lisboa</li>
-                                        <li>Grande Porto</li>
-                                        <li>Alentejo</li>
-                                        <li>Algarve</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
+                    <li class="content">
+                        <ul>
+                            <li>Norte</li>
+                            <li>Centro</li>
+                            <li>Sul</li>
+                            <li>Madeira</li>
+                            <li>Açores</li>
+                        </ul>
                     </li>
+                </ul>
+            </div>
+
+
+            <div id="li4col2">
+                <ul class="discover-column">
                     <li>
-                        <div id="li4col3">
-                            <ul class="discover-column">
-                                <li>
-                                    Cidades
-                                </li>
-                                <li class="content">
-                                    <ul>
-                                        <li>Porto</li>
-                                        <li>Lisboa</li>
-                                        <li>Coimbra</li>
-                                        <li>Almada</li>
-                                        <li>Santarém</li>
-                                        <li>ver mais</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
+                        Regiões
+                    </li>
+                    <li class="content">
+                        <ul>
+                            <li>Grande Lisboa</li>
+                            <li>Grande Porto</li>
+                            <li>Alentejo</li>
+                            <li>Algarve</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+
+            <div id="li4col3">
+                <ul class="discover-column">
+                    <li>
+                        Cidades
+                    </li>
+                    <li class="content">
+                        <ul>
+                            <li>Porto</li>
+                            <li>Lisboa</li>
+                            <li>Coimbra</li>
+                            <li>Almada</li>
+                            <li>Santarém</li>
+                            <li>ver mais</li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -301,4 +278,5 @@
         </div>
     </footer>
 </body>
+
 </html>
