--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
             <div id="linha2">
                 <ul>
                     <li>
-                        <div id="li2col1"></div>
+                        <div id="li2col1">
                             <ul class="discover-column">
                                 <li>
                                     Categorias
