--- a/index.html
+++ b/index.html
@@ -270,278 +270,231 @@
     </div>
     <footer>
         <div id="discover-new">
-            <h2>
+            <h2 id="li1col1">
                 DESCUBRA TAMBÉM...
             </h2>
-            <ul>
+            <ul id="li2col1" class="discover-column">
                 <li>
-                    <ul class="discover-column">
-                        <li>
-                            Categorias
-                        </li>
-                        <li class="content">
-                            <ul>
-                                <li>SUV's e 4x4</li>
-                                <li>Carrinhas</li>
-                                <li>Berlinas</li>
-                                <li>Familiares</li>
-                                <li>Citadinos</li>
-                                <li>ver mais</li>
-                            </ul>
-                        </li>
+                    Categorias
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>SUV's e 4x4</li>
+                        <li>Carrinhas</li>
+                        <li>Berlinas</li>
+                        <li>Familiares</li>
+                        <li>Citadinos</li>
+                        <li>ver mais</li>
                     </ul>
                 </li>
+            </ul>
+            <ul id="li2col2" class="discover-column">
                 <li>
-                    <ul class="discover-column">
-                        <li>
-                            Características
-                        </li>
-                        <li class="content">
-                            <ul>
-                                <li>Usado com 4 rodas motorizes</li>
-                                <li>Usado com 7 lugares</li>
-                                <li>Usados Híbridos</li>
-                                <li>Usados Elétricos</li>
-                                <li>Usados com mudanças automáticas</li>
-                            </ul>
-                        </li>
+                    Características
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>Usado com 4 rodas motorizes</li>
+                        <li>Usado com 7 lugares</li>
+                        <li>Usados Híbridos</li>
+                        <li>Usados Elétricos</li>
+                        <li>Usados com mudanças automáticas</li>
+                    </ul>
                 </li>
-
-
             </ul>
-            </li>
-            <li>
-                <ul class="discover-column">
-                    <li>
-                        Outros
-                    </li>
-                    <li class="content">
-                        <ul>
-                            <li>Usados premium</li>
-                            <li>Usados recentes</li>
-                            <li>Usados a menos de 15000€</li>
-                            <li>Usados a menos de 20000€</li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </li>
+            <ul id="li2col3" class="discover-column">
+                <li>
+                    Outros
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>Usados premium</li>
+                        <li>Usados recentes</li>
+                        <li>Usados a menos de 15000€</li>
+                        <li>Usados a menos de 20000€</li>
+                    </ul>
+                </li>
             </ul>
-
-            <h2>
+        </div>
+        <div id="discover-new2">
+            <h2 id="li3col1">
                 PESQUISAR POR LOCALIZAÇÃO
             </h2>
-            <ul>
+            <ul id="li4col1" class="discover-column">
                 <li>
-                    <ul class="discover-column">
-                        <li>
-                            Regiões
-                        </li>
-                        <li class="content">
-                            <ul>
-                                <li>Norte</li>
-                                <li>Centro</li>
-                                <li>Sul</li>
-                                <li>Madeira</li>
-                                <li>Açores</li>
-                            </ul>
-                        </li>
-
+                    Regiões
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>Norte</li>
+                        <li>Centro</li>
+                        <li>Sul</li>
+                        <li>Madeira</li>
+                        <li>Açores</li>
                     </ul>
-                </li>
-                <li>
-                    <ul class="discover-column">
-                        <li>
-                            Regiões
-                        </li>
-                        <li class="content">
-                            <ul>
-                                <li>Grande Lisboa</li>
-                                <li>Grande Porto</li>
-                                <li>Alentejo</li>
-                                <li>Algarve</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="discover-column">
-                        <li>
-                            Cidades
-                        </li>
-                        <li class="content">
-                            <ul>
-                                <li>Porto</li>
-                                <li>Lisboa</li>
-                                <li>Coimbra</li>
-                                <li>Almada</li>
-                                <li>Santarém</li>
-                                <li>ver mais</li>
-                            </ul>
-                        </li>
                 </li>
             </ul>
-            </li>
+            <ul id="li4col2" class="discover-column">
+                <li>
+                    Regiões
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>Grande Lisboa</li>
+                        <li>Grande Porto</li>
+                        <li>Alentejo</li>
+                        <li>Algarve</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul id="li4col3" class="discover-column">
+                <li>
+                    Cidades
+                </li><br>
+                <li class="content">
+                    <ul>
+                        <li>Porto</li>
+                        <li>Lisboa</li>
+                        <li>Coimbra</li>
+                        <li>Almada</li>
+                        <li>Santarém</li>
+                        <li>ver mais</li>
+                    </ul>
+                </li>
             </ul>
         </div>
-
         <div id="footer-last">
-            <h2>MARCAS</h2>
-            <ul>
+            <h2 id="li5col1">
+                MARCAS
+            </h2>
+            <ul id="li6col1" class="brands">
                 <li>
-                    <ul class="brands">
-                        <li>
-                            OPEL USADOS
-                        </li>
-                        <li>Astra</li>
-                        <li>Corsa</li>
-                        <li>Grandland</li>
-                        <li>Crossland</li>
-                        <li>Insignia</li>
-                        <li>Mokka</li>
-                        <li>Outros Modelos</li>
-                    </ul>
+                    OPEL USADOS
                 </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            CITROEN USADOS
-                        </li>
-                        <li>C4</li>
-                        <li>C5 Aircross</li>
-                        <li>C3</li>
-                        <li>C4 Cactus</li>
-                        <li>C3 Aircross</li>
-                        <li>Berlingo</li>
-                        <li>Outros Modelos</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            PEUGOT USADOS
-                        </li>
-                        <li>308</li>
-                        <li>2008</li>
-                        <li>208</li>
-                        <li>3008</li>
-                        <li>508</li>
-                        <li>Partener</li>
-                        <li>Outros Modelos</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            DS AUTOMOBILES USADOS
-                        </li>
-                        <li>DS7 Crossback</li>
-                        <li>DS3 Crossback</li>
-                        <li>DS4</li>
-                        <li>DS9</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            FIAT USADOS
-                        </li>
-                        <li>500</li>
-                        <li>Doblo</li>
-                        <li>Punto</li>
-                        <li>Panda</li>
-                        <li>Tipo</li>
-                        <li>Talento</li>
-                        <li>Outros Modelos</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            VOLKSWAGEN
-                        </li>
-                        <li>Sem resultados</li>
-                    </ul>
-                </li>
+                <li>Astra</li>
+                <li>Corsa</li>
+                <li>Grandland</li>
+                <li>Crossland</li>
+                <li>Insignia</li>
+                <li>Mokka</li>
+                <li>Outros Modelos</li>
             </ul>
-            <ul>
+            <ul id="li6col2" class="brands">
                 <li>
-                    <ul class="brands">
-                        <li>
-                            RENAUT
-                        </li>
-                        <li>Kadjar</li>
-                        <li>Megane</li>
-                        <li>Captur</li>
-                        <li>Clio</li>
-                        <li>Grand Scenic</li>
-                    </ul>
+                    CITROEN USADOS
                 </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            NISSAN
-                        </li>
-                        <li>Qashqai</li>
-                        <li>X-Trail</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            KIA
-                        </li>
-                        <li>Niro</li>
-                        <li>Picanto</li>
-                        <li>Sportage</li>
-                        <li>Stonic</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            <p>FORD</p>
-                        </li>
-                        <li>Toumeo</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            SEAT
-                        </li>
-                        <li>Ateca</li>
-                        <li>Ibiza</li>
-                        <li>Leon</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="brands">
-                        <li>
-                            OUTRAS MARCAS
-                        </li>
-                        <li>MAZDA</li>
-                        <li>HYUNDAY</li>
-                        <li>JEEP</li>
-                        <li>MITSUBISHI</li>
-                        <li>MINI</li>
-                        <li>BMW</li>
-                        <li class="all">VER TUDO</li>
-                    </ul>
-                </li>
+                <li>C4</li>
+                <li>C5 Aircross</li>
+                <li>C3</li>
+                <li>C4 Cactus</li>
+                <li>C3 Aircross</li>
+                <li>Berlingo</li>
+                <li>Outros Modelos</li>
             </ul>
-            <ul class="last_line">
-                <li>Mapa do site</li>
-                <li>Mapa do site retoma</li>
-                <li>DS Certified</li>
-                <li>Opel Usados Certificados</li>
-                <li>Resolução de litígios</li>
-                <li>Menções Legais</li>
-                <li>Consentimento de cookies</li>
-                <li>Política de Cookies</li>
-                <li>Política de Privacidade</li>
+            <ul id="li6col3"class="brands">
+                <li>
+                    PEUGOT USADOS
+                </li>
+                <li>308</li>
+                <li>2008</li>
+                <li>208</li>
+                <li>3008</li>
+                <li>508</li>
+                <li>Partener</li>
+                <li>Outros Modelos</li>
+            </ul>
+            <ul id="li6col4" class="brands">
+                <li>
+                    DS AUTOMOBILES USADOS
+                </li>
+                <li>DS7 Crossback</li>
+                <li>DS3 Crossback</li>
+                <li>DS4</li>
+                <li>DS9</li>
+            </ul>
+            <ul id="li6col5" class="brands">
+                <li>
+                    FIAT USADOS
+                </li>
+                <li>500</li>
+                <li>Doblo</li>
+                <li>Punto</li>
+                <li>Panda</li>
+                <li>Tipo</li>
+                <li>Talento</li>
+                <li>Outros Modelos</li>
+            </ul>
+            <ul id="li6col6" class="brands">
+                <li>
+                    VOLKSWAGEN
+                </li>
+                <li>Sem resultados</li>
+            </ul>
+            <ul id="li7col1" class="brands">
+                <li>
+                    RENAUT
+                </li>
+                <li>Kadjar</li>
+                <li>Megane</li>
+                <li>Captur</li>
+                <li>Clio</li>
+                <li>Grand Scenic</li>
+            </ul>
+            <ul id="li7col2" class="brands">
+                <li>
+                    NISSAN
+                </li>
+                <li>Qashqai</li>
+                <li>X-Trail</li>
+            </ul>
+            <ul id="li7col3" class="brands">
+                <li>
+                    KIA
+                </li>
+                <li>Niro</li>
+                <li>Picanto</li>
+                <li>Sportage</li>
+                <li>Stonic</li>
+            </ul>
+            <ul id="li7col4" class="brands">
+                <li>
+                    <p>FORD</p>
+                </li>
+                <li>Fiesta</li>
+                <li>Toumeo</li>
+            </ul>
+            <ul id="li7col5" class="brands">
+                <li>
+                    SEAT
+                </li>
+                <li>Ateca</li>
+                <li>Ibiza</li>
+                <li>Leon</li>
+            </ul>
+            <ul id="li7col6" class="brands">
+                <li>
+                    OUTRAS MARCAS
+                </li>
+                <li>MAZDA</li>
+                <li>HYUNDAY</li>
+                <li>JEEP</li>
+                <li>MITSUBISHI</li>
+                <li>MINI</li>
+                <li>BMW</li>
+                <li class="all">VER TUDO</li>
             </ul>
         </div>
+        <ul id="footer-footer" class="last_line">
+            <li>Mapa do site</li>
+            <li>Mapa do site retoma</li>
+            <li>DS Certified</li>
+            <li>Opel Usados Certificados</li>
+            <li>Resolução de litígios</li>
+            <li>Menções Legais</li>
+            <li>Consentimento de cookies</li>
+            <li>Política de Cookies</li>
+            <li>Política de Privacidade</li>
+        </ul>
     </footer>
     <script src="scripts/script.js" defer></script>
 </body>
