--- a/index.html
+++ b/index.html
@@ -190,6 +190,28 @@
                 </div>
             </div>
         </div>
+        <div id="search">
+            <ul id="search-index">
+                <li>MARCA/MODELO</li>
+                <li>CATEGORIA</li>
+                <li>COMBUSTíVEL</li>
+                <li>PREÇO</li>
+                <li>QUILOMOTRAGEM</li>
+                <li>LOCALIZAÇÃO</li>
+                <li>ANO</li>
+                <li>VER RESULTADOS</li>
+                <li>PESQUISA AVANÇADA</li>
+            </ul>
+        </div>
+        <div id="search-mediaq">
+            <ul>
+                <li id="sm1">ENCONTRE O SEU CARRO USADO</li>
+                <li>PESQUISA RÁPIDA</li>
+                <li>PESQUISA AVANÇADA</li><br><br>
+                <li>VER AS OFERTAS</li>
+                <li>VER VIATURAS</li>
+            </ul>
+        </div>
         <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
         <div id="interim-info">
             <h2>PESQUISE E RESERVE ON-LINE</h2>
@@ -270,11 +292,11 @@
     </div>
     <footer>
         <div id="discover-new">
-            <h2 id="li1col1">
+            <br><h2 id="li1col1">
                 DESCUBRA TAMBÉM...
             </h2>
             <ul id="li2col1" class="discover-column">
-                <li>
+                <br><li>
                     Categorias
                 </li><br>
                 <li class="content">
@@ -289,7 +311,7 @@
                 </li>
             </ul>
             <ul id="li2col2" class="discover-column">
-                <li>
+                <br><li>
                     Características
                 </li><br>
                 <li class="content">
@@ -303,7 +325,7 @@
                 </li>
             </ul>
             <ul id="li2col3" class="discover-column">
-                <li>
+                <br><li>
                     Outros
                 </li><br>
                 <li class="content">
@@ -317,11 +339,11 @@
             </ul>
         </div>
         <div id="discover-new2">
-            <h2 id="li3col1">
+            <br><h2 id="li3col1">
                 PESQUISAR POR LOCALIZAÇÃO
             </h2>
             <ul id="li4col1" class="discover-column">
-                <li>
+                <br><li>
                     Regiões
                 </li><br>
                 <li class="content">
@@ -335,7 +357,7 @@
                 </li>
             </ul>
             <ul id="li4col2" class="discover-column">
-                <li>
+                <br> <li>
                     Regiões
                 </li><br>
                 <li class="content">
@@ -348,7 +370,7 @@
                 </li>
             </ul>
             <ul id="li4col3" class="discover-column">
-                <li>
+                <br><li>
                     Cidades
                 </li><br>
                 <li class="content">
@@ -370,7 +392,7 @@
             <ul id="li6col1" class="brands">
                 <li>
                     OPEL USADOS
-                </li>
+                </li><br>
                 <li>Astra</li>
                 <li>Corsa</li>
                 <li>Grandland</li>
@@ -382,7 +404,7 @@
             <ul id="li6col2" class="brands">
                 <li>
                     CITROEN USADOS
-                </li>
+                </li><br>
                 <li>C4</li>
                 <li>C5 Aircross</li>
                 <li>C3</li>
@@ -394,7 +416,7 @@
             <ul id="li6col3"class="brands">
                 <li>
                     PEUGOT USADOS
-                </li>
+                </li><br>
                 <li>308</li>
                 <li>2008</li>
                 <li>208</li>
@@ -406,7 +428,7 @@
             <ul id="li6col4" class="brands">
                 <li>
                     DS AUTOMOBILES USADOS
-                </li>
+                </li><br>
                 <li>DS7 Crossback</li>
                 <li>DS3 Crossback</li>
                 <li>DS4</li>
@@ -415,7 +437,7 @@
             <ul id="li6col5" class="brands">
                 <li>
                     FIAT USADOS
-                </li>
+                </li><br>
                 <li>500</li>
                 <li>Doblo</li>
                 <li>Punto</li>
@@ -427,13 +449,13 @@
             <ul id="li6col6" class="brands">
                 <li>
                     VOLKSWAGEN
-                </li>
+                </li><br>
                 <li>Sem resultados</li>
             </ul>
             <ul id="li7col1" class="brands">
                 <li>
                     RENAUT
-                </li>
+                </li><br>
                 <li>Kadjar</li>
                 <li>Megane</li>
                 <li>Captur</li>
@@ -443,14 +465,14 @@
             <ul id="li7col2" class="brands">
                 <li>
                     NISSAN
-                </li>
+                </li><br>
                 <li>Qashqai</li>
                 <li>X-Trail</li>
             </ul>
             <ul id="li7col3" class="brands">
                 <li>
                     KIA
-                </li>
+                </li><br>
                 <li>Niro</li>
                 <li>Picanto</li>
                 <li>Sportage</li>
@@ -458,15 +480,15 @@
             </ul>
             <ul id="li7col4" class="brands">
                 <li>
-                    <p>FORD</p>
-                </li>
+                    FORD
+                </li><br>
                 <li>Fiesta</li>
                 <li>Toumeo</li>
             </ul>
             <ul id="li7col5" class="brands">
                 <li>
                     SEAT
-                </li>
+                </li><br>
                 <li>Ateca</li>
                 <li>Ibiza</li>
                 <li>Leon</li>
@@ -474,7 +496,7 @@
             <ul id="li7col6" class="brands">
                 <li>
                     OUTRAS MARCAS
-                </li>
+                </li><br>
                 <li>MAZDA</li>
                 <li>HYUNDAY</li>
                 <li>JEEP</li>
