Mais um bocadinho <3

--- a/index.html
+++ b/index.html
@@ -80,116 +80,7 @@
 
 
 
-        <div class="calculator" id="sale">
-            <h2>Preço de Venda</h2>
-            <form>
-                <label for="maker">Marca</label>
-                <select title="Marca" name="maker" value="" required>
-                    <option disabled selected value> -- SELECIONE UMA MARCA -- </option>
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="mercedes">Mercedes</option>
-                    <option value="audi">Audi</option>
-                    <option value="bmw">BMW</option>
-                    <option value="volkswagen">Volkswagen</option>
-                </select>
-                <span class="model-select">
-                    <label for="model">Modelo</label>
-                    <select title="Modelo" name="model" required>
-                    </select>
-                </span>
-                <label for="date">Ano de Matrícula</label>
-                <input name="date" title="Ano de Matrícula" type="number" placeholder="1900" min="1900" max="9999"
-                    step="1" required>
-                <label for="price">Preço de Venda</label>
-                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="1000,00" min="500"
-                        max="9999999" step="1" required> €</div>
-                <label for="kms">Quilometragem</label>
-                <div class="km-input"><input name="kms" title="Quilometragem" type="number" placeholder="1000" min="0"
-                        max="9999999" step="1" required> km</div>
-                <input type="submit" value="Calcular">
-            </form>
-            <div class="results">
-                <div>
-                    <h3>Como Novo</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
-                </div>
-                <div class="vertical-line">
-                </div>
-                <div>
-                    <h3>Bom Estado</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
-                </div>
-                <div class="vertical-line"></div>
-                <div>
-                    <h3>Mau Estado</h3>
-                    <ul>
-                        <li>9.999€</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="calculator" id="finance">
-            <h2>Financiamento</h2>
-            <form>
-                <label for="price">Depósito Inicial</label>
-                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="500" min="500"
-                        max="9999999" step="1" required> €
-                </div>
-                <label for="price-finance">Financiamento Necessário</label>
-                <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500" min="500"
-                        max="9999999" step="1" required> €
-                </div>
-                <label for="years">Anos de Financiamento</label>
-                <input name="years" title="Anos" type="number" placeholder="1" min="1" max="99" step="1" required>
-                <input type="submit" value="Calcular">
-            </form>
-            <div class="results">
-                <div>
-                    <h3>1.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
-                <div class="vertical-line">
-                </div>
-                <div>
-                    <h3>2.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
-                <div class="vertical-line"></div>
-                <div>
-                    <h3>3.º Caso</h3>
-                    <ul>
-                        <li class="tot-amt"></li>
-                        <li class="len-amt"></li>
-                        <li class="dur-amt"></li>
-                        <li class="tax-amt"></li>
-                        <li class="spd-amt"></li>
-                        <li class="ini-amt"></li>
-                        <li class="mon-amt"></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        
         <div id="search">
             <ul id="search-index">
                 <li>MARCA/MODELO</li>
@@ -205,14 +96,16 @@
         </div>
         <div id="search-mediaq">
             <ul>
-                <li id="sm1">ENCONTRE O SEU CARRO USADO</li>
+                <li>ENCONTRE O SEU CARRO USADO</li>
                 <li>PESQUISA RÁPIDA</li>
                 <li>PESQUISA AVANÇADA</li><br><br>
-                <li>VER AS OFERTAS</li>
+                <li>VER TODAS AS OFERTAS</li>
                 <li>VER VIATURAS</li>
             </ul>
         </div>
-        <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
+        <div>
+            <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
+            <img id="brand-banner-media" src="imgs/banner/banner_mobile_marcas.jpeg">
         <div id="interim-info">
             <h2>PESQUISE E RESERVE ON-LINE</h2>
             <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
@@ -274,6 +167,118 @@
             </ul>
         </div>
     </main>
+    <div id="extra-finance">
+        <div class="calculator" id="sale">
+            <form>
+                <h2>Preço de Venda</h2>
+                <label for="maker">Marca</label>
+                <select title="Marca" name="maker" value="" required>
+                    <option disabled selected value> -- SELECIONE UMA MARCA -- </option>
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                    <option value="bmw">BMW</option>
+                    <option value="volkswagen">Volkswagen</option>
+                </select>
+                <span class="model-select">
+                    <label for="model">Modelo</label>
+                    <select title="Modelo" name="model" required>
+                    </select>
+                </span>
+                <label for="date">Ano de Matrícula</label>
+                <input name="date" title="Ano de Matrícula" type="number" placeholder="1900" min="1900" max="9999"
+                    step="1" required>
+                <label for="price">Preço de Venda</label>
+                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="1000,00" min="500"
+                        max="9999999" step="1" required> €</div>
+                <label for="kms">Quilometragem</label>
+                <div class="km-input"><input name="kms" title="Quilometragem" type="number" placeholder="1000" min="0"
+                        max="9999999" step="1" required> km</div>
+                <input type="submit" value="Calcular">
+            </form>
+            <div class="results">
+                <div>
+                    <h3>Como Novo</h3>
+                    <ul>
+                        <li>9.999€</li>
+                    </ul>
+                </div>
+                <div class="vertical-line">
+                </div>
+                <div>
+                    <h3>Bom Estado</h3>
+                    <ul>
+                        <li>9.999€</li>
+                    </ul>
+                </div>
+                <div class="vertical-line"></div>
+                <div>
+                    <h3>Mau Estado</h3>
+                    <ul>
+                        <li>9.999€</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="calculator" id="finance">
+            <form>
+                <h2>Financiamento</h2>
+                <label for="price">Depósito Inicial</label>
+                <div class="price-input"><input name="price" title="Preço" type="number" placeholder="500" min="500"
+                        max="9999999" step="1" required> €
+                </div>
+                <label for="price-finance">Financiamento Necessário</label>
+                <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500" min="500"
+                        max="9999999" step="1" required> €
+                </div>
+                <label for="years">Anos de Financiamento</label>
+                <input name="years" title="Anos" type="number" placeholder="1" min="1" max="99" step="1" required>
+                <input type="submit" value="Calcular">
+            </form>
+            <div class="results">
+                <div>
+                    <h3>1.º Caso</h3>
+                    <ul>
+                        <li class="tot-amt"></li>
+                        <li class="len-amt"></li>
+                        <li class="dur-amt"></li>
+                        <li class="tax-amt"></li>
+                        <li class="spd-amt"></li>
+                        <li class="ini-amt"></li>
+                        <li class="mon-amt"></li>
+                    </ul>
+                </div>
+                <div class="vertical-line">
+                </div>
+                <div>
+                    <h3>2.º Caso</h3>
+                    <ul>
+                        <li class="tot-amt"></li>
+                        <li class="len-amt"></li>
+                        <li class="dur-amt"></li>
+                        <li class="tax-amt"></li>
+                        <li class="spd-amt"></li>
+                        <li class="ini-amt"></li>
+                        <li class="mon-amt"></li>
+                    </ul>
+                </div>
+                <div class="vertical-line"></div>
+                <div>
+                    <h3>3.º Caso</h3>
+                    <ul>
+                        <li class="tot-amt"></li>
+                        <li class="len-amt"></li>
+                        <li class="dur-amt"></li>
+                        <li class="tax-amt"></li>
+                        <li class="spd-amt"></li>
+                        <li class="ini-amt"></li>
+                        <li class="mon-amt"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <div>
         <div class="banner1">
             <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
