--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2>PESQUISE E RESERVE ON-LINE</h2>
             <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
                 forma cómoda. Pesquise e reserve on-line.</p>
-            <p>Agora pode optar pelo nosso serviço de entrega em sua casa<sup>1</sup>. De outra forma, os nossos 80
+            <p>Agora pode optar pelo nosso serviço de <span id="underline">entrega em sua casa<sup>1</sup></span>. De outra forma, os nossos 80
                 pontos de venda
                 estão prontos para o receber.</p>
             <p><sup>1</sup> Nos concessionários aderentes.</p>
@@ -167,6 +167,70 @@
             </ul>
         </div>
     </main>
+    <div id="pre-show">
+        <ul>
+            <li>USADOS EM DESTAQUE ATÉ 15.000 €</li>
+            <li><</li>
+            <li>></li>
+            <li>VER TUDO</li>
+        </ul>
+    </div>
+    <div id="car-show">
+        <div class="cars">
+            <ul id="first-car">
+                <li>COMPARAR</li>
+                <li><img id="_1st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                <li>GARANTIA 36 MESES</li>
+                <li>PEUGEOT 108</li>
+                <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                <li>38 327 Km | Gasolina</li>
+                <li>06-2021 | Manual</li>
+                <li>WLTP</li>
+                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+            </ul>
+            <ul id="first-car-end">
+                <li>13 980 €</li>
+                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+            </ul>
+        </div>
+        <div class="cars">
+            <ul id="snd-car">
+                <li>COMPARAR</li>
+                <li><img id="_2st" src="imgs/for_sale/PEUGEOT-108-202579_1.jpeg"></li>
+                <li>GARANTIA 36 MESES</li>
+                <li>PEUGEOT 108</li>
+                <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                <li>33 614 Km | Gasolina</li>
+                <li>06-2021 | Manual</li>
+                <li>WLTP</li>
+                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                <li><img src="imgs/icons/B.png" width="50px" height="15px"></li>
+            </ul>
+            <ul id="snd-car-end">
+                <li>13 980 €</li>
+                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+            </ul>
+        </div>
+        <div class="cars">
+            <ul id="trd-car">
+                <li>COMPARAR</li>
+                <li><img id="_3st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                <li>GARANTIA 36 MESES</li>
+                <li>PEUGEOT 108</li>
+                <li>1 1.0 VTI 72 CVM5 STYLE</li>
+                <li>29 743 Km | Gasolina</li>
+                <li>06-2021 | Manual</li>
+                <li>WLTP</li>
+                <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
+                <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+            </ul>
+            <ul id="trd-car-end">
+                <li>13 980 €</li>
+                <li>Spoticar Automóveis do Mondego Coimbra<br>Coimbra</li>
+            </ul>
+        </div>
+    </div>
     <div id="extra-finance">
         <div class="calculator" id="sale">
             <form>
