--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
             </div>
         </div>-->
 
-
-
-        
         <div id="search">
             <ul id="search-index">
                 <li>MARCA/MODELO</li>
@@ -106,71 +103,74 @@
         <div>
             <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
             <img id="brand-banner-media" src="imgs/banner/banner_mobile_marcas.jpeg">
-        <div id="interim-info">
-            <h2>PESQUISE E RESERVE ON-LINE</h2>
-            <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
-                forma cómoda. Pesquise e reserve on-line.</p>
-            <p>Agora pode optar pelo nosso serviço de <span id="underline">entrega em sua casa<sup>1</sup></span>. De outra forma, os nossos 80
-                pontos de venda
-                estão prontos para o receber.</p>
-            <p><sup>1</sup> Nos concessionários aderentes.</p>
-        </div>
-        <div id="compromises-info">
-            <h2><a>COMPROMISSOS DO SITE</a></h2>
-            <ul>
-                <li><img src="imgs/icons/check.png">
-                    <p>SATISFAÇÃO OU REEMBOLSO</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/car.png">
-                    <p>REDE DE ASSISTÊNCIA NACIONAL</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/cell.png">
-                    <p>ASSISTÊNCIA EM VIAGEM</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/calc.png">
-                    <p>FINANCIAMENTO PERSONALIZADO</p>
-                </li>
-            </ul>
-            <p id="phrase">VER OS NOSSOS COMPROMISSO, AS NOSSAS GARANTIAS E AS VANTAGENS SPOTICAR PARA A COMPRA DE UM
-                VEÍCULO ELÉTRICO OU HÍBRIDO > </p>
-        </div>
-        <div id="opportunities-info">
-            <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
-            <ul>
-                <li>
-                    <img src="imgs/icons/1.png">
-                    <p>OPORTUNIDADES PREMIUM</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/2.png">
-                    <p>OPORTUNIDADES PREÇOS BAIXOS</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/3.png">
-                    <p>USADOS EM CAMPANHA</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/4.png">
-                    <p>COMERCIAIS USADOS</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/5.png">
-                    <p>OPORTUNIDADES ELÉTRICAS</p>
-                </li>
-                <li>
-                    <img src="imgs/icons/6.png">
-                    <p>OPORTUNIDADES HÍBRIDAS</p>
-                </li>
-            </ul>
-        </div>
+            <div id="interim-info">
+                <h2>PESQUISE E RESERVE ON-LINE</h2>
+                <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder
+                    de
+                    forma cómoda. Pesquise e reserve on-line.</p>
+                <p>Agora pode optar pelo nosso serviço de <span id="underline">entrega em sua casa<sup>1</sup></span>.
+                    De outra forma, os nossos 80
+                    pontos de venda
+                    estão prontos para o receber.</p>
+                <p><sup>1</sup> Nos concessionários aderentes.</p>
+            </div>
+            <div id="compromises-info">
+                <h2><a>COMPROMISSOS DO SITE</a></h2>
+                <ul>
+                    <li><img src="imgs/icons/check.png">
+                        <p>SATISFAÇÃO OU REEMBOLSO</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/car.png">
+                        <p>REDE DE ASSISTÊNCIA NACIONAL</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/cell.png">
+                        <p>ASSISTÊNCIA EM VIAGEM</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/calc.png">
+                        <p>FINANCIAMENTO PERSONALIZADO</p>
+                    </li>
+                </ul>
+                <p id="phrase">VER OS NOSSOS COMPROMISSO, AS NOSSAS GARANTIAS E AS VANTAGENS SPOTICAR PARA A COMPRA DE
+                    UM
+                    VEÍCULO ELÉTRICO OU HÍBRIDO > </p>
+            </div>
+            <div id="opportunities-info">
+                <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
+                <ul>
+                    <li>
+                        <img src="imgs/icons/1.png">
+                        <p>OPORTUNIDADES PREMIUM</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/2.png">
+                        <p>OPORTUNIDADES PREÇOS BAIXOS</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/3.png">
+                        <p>USADOS EM CAMPANHA</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/4.png">
+                        <p>COMERCIAIS USADOS</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/5.png">
+                        <p>OPORTUNIDADES ELÉTRICAS</p>
+                    </li>
+                    <li>
+                        <img src="imgs/icons/6.png">
+                        <p>OPORTUNIDADES HÍBRIDAS</p>
+                    </li>
+                </ul>
+            </div>
     </main>
     <div id="pre-show">
         <ul>
             <li>USADOS EM DESTAQUE ATÉ 15.000 €</li>
-            <li><</li>
+            <li>&#60;</li>
             <li>></li>
             <li>VER TUDO</li>
         </ul>
@@ -262,7 +262,7 @@
                 <input type="submit" value="Calcular">
             </form>
             <div class="results">
-                <div>
+                <div class="result-pane">
                     <h3>Como Novo</h3>
                     <ul>
                         <li>9.999€</li>
@@ -270,14 +270,14 @@
                 </div>
                 <div class="vertical-line">
                 </div>
-                <div>
+                <div class="result-pane">
                     <h3>Bom Estado</h3>
                     <ul>
                         <li>9.999€</li>
                     </ul>
                 </div>
                 <div class="vertical-line"></div>
-                <div>
+                <div class="result-pane">
                     <h3>Mau Estado</h3>
                     <ul>
                         <li>9.999€</li>
@@ -293,15 +293,15 @@
                         max="9999999" step="1" required> €
                 </div>
                 <label for="price-finance">Financiamento Necessário</label>
-                <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500" min="500"
-                        max="9999999" step="1" required> €
+                <div class="price-input"><input name="price-finance" title="Preço" type="number" placeholder="500"
+                        min="500" max="9999999" step="1" required> €
                 </div>
                 <label for="years">Anos de Financiamento</label>
                 <input name="years" title="Anos" type="number" placeholder="1" min="1" max="99" step="1" required>
                 <input type="submit" value="Calcular">
             </form>
             <div class="results">
-                <div>
+                <div class="result-pane">
                     <h3>1.º Caso</h3>
                     <ul>
                         <li class="tot-amt"></li>
@@ -315,7 +315,7 @@
                 </div>
                 <div class="vertical-line">
                 </div>
-                <div>
+                <div class="result-pane">
                     <h3>2.º Caso</h3>
                     <ul>
                         <li class="tot-amt"></li>
@@ -328,7 +328,7 @@
                     </ul>
                 </div>
                 <div class="vertical-line"></div>
-                <div>
+                <div class="result-pane">
                     <h3>3.º Caso</h3>
                     <ul>
                         <li class="tot-amt"></li>
@@ -348,24 +348,28 @@
             <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
             <div class="centered">O SEU SUV USADO
                 <br><br>
-            <p>COMO ESCOLHER BEM O SEU SUV USADO</p></div>
+                <p>COMO ESCOLHER BEM O SEU SUV USADO</p>
+            </div>
             <div class="centered-bottom">LEIA MAIS</div>
         </div>
-        
+
         <div class="banner1">
             <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
-            <div class="centered"><p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p></div>
+            <div class="centered">
+                <p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p>
+            </div>
             <div class="centered-bottom">LEIA MAIS</div>
-        </div>
         </div>
     </div>
     <footer>
         <div id="discover-new">
-            <br><h2 id="li1col1">
+            <br>
+            <h2 id="li1col1">
                 DESCUBRA TAMBÉM...
             </h2>
             <ul id="li2col1" class="discover-column">
-                <br><li>
+                <br>
+                <li>
                     Categorias
                 </li><br>
                 <li class="content">
@@ -380,7 +384,8 @@
                 </li>
             </ul>
             <ul id="li2col2" class="discover-column">
-                <br><li>
+                <br>
+                <li>
                     Características
                 </li><br>
                 <li class="content">
@@ -394,7 +399,8 @@
                 </li>
             </ul>
             <ul id="li2col3" class="discover-column">
-                <br><li>
+                <br>
+                <li>
                     Outros
                 </li><br>
                 <li class="content">
@@ -408,11 +414,13 @@
             </ul>
         </div>
         <div id="discover-new2">
-            <br><h2 id="li3col1">
+            <br>
+            <h2 id="li3col1">
                 PESQUISAR POR LOCALIZAÇÃO
             </h2>
             <ul id="li4col1" class="discover-column">
-                <br><li>
+                <br>
+                <li>
                     Regiões
                 </li><br>
                 <li class="content">
@@ -426,7 +434,8 @@
                 </li>
             </ul>
             <ul id="li4col2" class="discover-column">
-                <br> <li>
+                <br>
+                <li>
                     Regiões
                 </li><br>
                 <li class="content">
@@ -439,7 +448,8 @@
                 </li>
             </ul>
             <ul id="li4col3" class="discover-column">
-                <br><li>
+                <br>
+                <li>
                     Cidades
                 </li><br>
                 <li class="content">
@@ -482,7 +492,7 @@
                 <li>Berlingo</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col3"class="brands">
+            <ul id="li6col3" class="brands">
                 <li>
                     PEUGOT USADOS
                 </li><br>
