--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </li>
                     <li>
                         CAMPANHAS
-                    </li>
+                   </li>
                     <li>
                         COMERCIAIS USADOS
                     </li>
@@ -56,7 +56,7 @@
             </div>
     </header>
     <main>
-        <!--<div>
+        <div>
             <div class="carrossel">
                 <ul class="slides-list">
                     <li>
@@ -76,7 +76,7 @@
                     </li>
                 </ul>
             </div>
-        </div>-->
+        </div>
 
         <div id="search">
             <ul id="search-index">
