--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                 <ul class="slides-list">
                     <li>
                         <input type="radio" id="slide1" name="slide" checked>
-                        <label for="slide1"></label>
+                        <label for="slide"></label>
                         <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
                     </li>
                     <li>
                         <input type="radio" id="slide2" name="slide">
-                        <label for="slide2"></label>
+                        <label for="slide"></label>
                         <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
                     </li>
                     <li>
                         <input type="radio" id="slide3" name="slide">
-                        <label for="slide3"></label>
+                        <label for="slide"></label>
                         <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
                     </li>
                 </ul>
@@ -234,7 +234,7 @@
     <div id="extra-finance">
         <div class="calculator" id="sale">
             <form>
-                <h2>Preço de Venda</h2>
+                <h2 id="sale1">Preço de Venda</h2>
                 <label for="maker">Marca</label>
                 <select title="Marca" name="maker" value="" required>
                     <option disabled selected value> -- SELECIONE UMA MARCA -- </option>
@@ -287,7 +287,7 @@
         </div>
         <div class="calculator" id="finance">
             <form>
-                <h2>Financiamento</h2>
+                <h2 id="sale2">Financiamento</h2>
                 <label for="price">Depósito Inicial</label>
                 <div class="price-input"><input name="price" title="Preço" type="number" placeholder="500" min="500"
                         max="9999999" step="1" required> €
