--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
     </header>
     <main>
         <div class="carrossel">
+            <button class="car-btn-left">&lt;</button>
+            <button class="car-btn-right">&gt;</button>
+            <div>
                 <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
                 <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
-                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
+                <img
+                    src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
+            </div>
         </div>
 
         <div id="search">
